--- a/MY PORTFOLIO.html
+++ b/MY PORTFOLIO.html
@@ -11,7 +11,10 @@
 
 <body style="background-color: red;">
     <img src="ayan.jpeg" alt="My Image">
+    <br>
     <a href="https://www.linkedin.com/in/mdayan-dot/"> MY LINKED IN</a>
+    <br>
+    <a href="education.html"> MY EDUCATION</a>
     <p><i><b>MY NAME IS AYAN</b></i></p>
     </a>
     <p> <i>I AM CYBER SECURITY ENTHUSIAST</i></p>
