--- a/MY PORTFOLIO.html
+++ b/MY PORTFOLIO.html
@@ -6,19 +6,24 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>PORTFOLIO</title>
 </head>
-<h1><u>THIS IS MY PORTFILIO</u></h1>
+<h1><u>THIS IS MY PORTFILIO</u>
+</h1>
 
+<div>
 
-<body style="background-color: red;">
-    <img src="ayan.jpeg" alt="My Image">
-    <br>
-    <a href="https://www.linkedin.com/in/mdayan-dot/"> MY LINKED IN</a>
-    <br>
-    <a href="education.html"> MY EDUCATION</a>
-    <p><i><b>MY NAME IS AYAN</b></i></p>
-    </a>
-    <p> <i>I AM CYBER SECURITY ENTHUSIAST</i></p>
-    <P><i> BUT I AM ALSO INTERESTED IN WEB DESIGNING</i></P>
+    <body style="background-color:red;">
+        <img src="ayan.jpeg" alt="My Image" height="280">
+        <br>
+        <a href="https://www.linkedin.com/in/mdayan-dot/" target="main"> <img src="linkedin.png" alt="LinkedIn"
+                height="50">
+            LINKED IN</a>
+        <br>
+        <a href="education.html" target="main"> <img src="studies.jpg" alt="education" height="50"> MY EDUCATION</a>
+        <p><i><b>MY NAME IS AYAN</b></i></p>
+        </a>
+        <p> <i>I AM CYBER SECURITY ENTHUSIAST</i></p>
+        <P><i> BUT I AM ALSO INTERESTED IN WEB DESIGNING</i></P>
+</div>
 
 </body>
 
