--- a/education.html
+++ b/education.html
@@ -11,7 +11,7 @@
 <body>
 
     <body style="background-color: yellow;"></body>
-    <img src="studies.jpg" alt="education">
+    <img src="studies.jpg" alt="education" height="280">
     <p><i><b>MY NAME IS AYAN</b></i></p>
     </a>
     <p>I HAVE DONE MY MATRICULATION FROM ST. KAREN'S SECONDARY SCHOOL</p>
