--- a/index.html
+++ b/index.html
@@ -7,31 +7,40 @@
     <title>MY FIRST PAGE</title>
 </head>
 
+
 <body>
-    <p> i am spiderman </p>
-    <a href="https://www.youtube.com/watch?v=HcOc7P5BMi4">YOUTUBE</a>
-    <br>
-    <a href="MY PORTFOLIO.html">MY PORTFOLIO</a>
-    <br>
-    <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcTHTjHLYhfUK0bipocDLOVHpW4B9Hx2zzV9Jw&s"
-        alt="spiderman" />
-    <br>
-    <b> i am bold </b>
-    <hr>
-    <i> i am italic </i>
-    <hr>
-    <u> i am underlined </u>
-    <hr>
-    <big> i am big</big>
-    <hr>
-    <small> i am small</small>
-    <hr>
-    <p>H<sub>8</sub>O</p>
-    <br>
-    <p>AYAN<sup>100</sup></p>
-    <pre>Lorem ipsum dolor sit amet consectetur, adipisicing elit. 
+    <header>
+        <h1>this is just a basics rough page</h1>
+    </header>
+    <main>
+        <p> i am spiderman </p>
+        <a href="https://www.youtube.com/watch?v=HcOc7P5BMi4">YOUTUBE</a>
+        <br>
+        <a href="MY PORTFOLIO.html">MY PORTFOLIO</a>
+        <br>
+        <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcTHTjHLYhfUK0bipocDLOVHpW4B9Hx2zzV9Jw&s"
+            alt="spiderman" height="50" />
+        <br>
+        <b> i am bold </b>
+        <hr>
+        <i> i am italic </i>
+        <hr>
+        <u> i am underlined </u>
+        <hr>
+        <big> i am big</big>
+        <hr>
+        <small> i am small</small>
+        <hr>
+        <p>H<sub>8</sub>O</p>
+        <br>
+        <p>AYAN<sup>100</sup></p>
+        <pre>Lorem ipsum dolor sit amet consectetur, adipisicing elit. 
 Magni nobis repellendus blanditiis amet dolorem tenetur, rem ipsum labore dolores suscipit! 
 Cupiditate repudiandae aperiam dignissimos quia molestias, reprehenderit obcaecati? Laudantium, unde.</pre>
+        <section>interest: sports | art | not studying</section>
+        <section>priorities: family | religion | me</section>
+        <article> story : will tell you some other day</article>
+    </main>
 
 </body>
 
