--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
         <p> i am spiderman </p>
         <a href="https://www.youtube.com/watch?v=HcOc7P5BMi4">YOUTUBE</a>
         <br>
-        <a href="MY PORTFOLIO.html">MY PORTFOLIO</a>
+        <a href="MY PORTFOLIO.html" target="main">MY PORTFOLIO</a>
         <br>
         <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcTHTjHLYhfUK0bipocDLOVHpW4B9Hx2zzV9Jw&s"
             alt="spiderman" height="50" />
@@ -40,6 +40,36 @@ Cupiditate repudiandae aperiam dignissimos quia molestias, reprehenderit obcaeca
         <section>interest: sports | art | not studying</section>
         <section>priorities: family | religion | me</section>
         <article> story : will tell you some other day</article>
+
+        <table>
+            <caption>student data</caption>
+            <tr>
+                <thead>
+                    <th>NAME</th>
+
+                    <th>roll</th>
+
+                    <th>class</th>
+                </thead>
+
+
+            </tr>
+            <tr>
+                <tbody>
+                    <td>ayan</td>
+                    <td>ted</td>
+                    <td>44</td>
+                    <td>55</td>
+                    <td>5</td>
+                    <td>5</td>
+                </tbody>
+            </tr>
+
+        </table>
+
+
+
+
     </main>
 
 </body>
