--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 
 <body>
     <header>
-        <h1>this is just a basics rough page</h1>
+        <h1><i>MY PRACTICE PAGE</i></h1>
     </header>
     <main>
         <p> i am spiderman </p>
