--- a/Hobbies.html
+++ b/Hobbies.html
@@ -10,6 +10,8 @@
 <body>
     <header>
         <h1><b>MY HOBBIES</b></h1>
+
+        <body style="background-color: green;"></body>
     </header>
     <main>
         <p>My Hobbies Include:</p>
