--- a/MY PORTFOLIO.html
+++ b/MY PORTFOLIO.html
@@ -21,7 +21,8 @@
         <a href="education.html" target="main"> <img src="studies.jpg" alt="education" height="50"> MY EDUCATION</a>
         <p><i><b>MY NAME IS AYAN</b></i></p>
         <a href="Hobbies.html" target="main"> <img src="hobbies.png"
-                alt="Hobbies icon representing leisure activities and personal interests" height="50"> MY HOBBIES</a>
+                alt="Hobbies icon representing leisure activities and personal interests" height="60
+                "> MY HOBBIES</a>
         </a>
         <p> <i>I AM CYBER SECURITY ENTHUSIAST</i></p>
         <P><i> BUT I AM ALSO INTERESTED IN WEB DESIGNING</i></P>
