--- a/form practice.html
+++ b/form practice.html
@@ -10,8 +10,10 @@
 <body>
     <form action="action.php">
         <input type="text" placeholder="enter your name">
+        <input type="text" placeholder="enter your subject">
+        <input type="number" placeholder="enter your age">
 
-        <input type="password" placehoder="password">
+        <input type="password" placeholder="password">
         <input type="radio" value="69" name="class" id="11"> class 69
         <input type="radio" value="88" name="class" id="12"> class 88
 
