--- a/form practice.html
+++ b/form practice.html
@@ -16,6 +16,7 @@
         <input type="password" placeholder="password">
         <input type="radio" value="69" name="class" id="11"> class 69
         <input type="radio" value="88" name="class" id="12"> class 88
+        <input type="radio" value="99" name="class" id="13"> class 99
 
     </form>
 </body>
