--- a/form practice.html
+++ b/form practice.html
@@ -12,6 +12,7 @@
         <input type="text" placeholder="enter your name">
         <input type="text" placeholder="enter your subject">
         <input type="number" placeholder="enter your age">
+        <input type="number" placeholder="enter your phone number">
 
         <input type="password" placeholder="password">
         <input type="radio" value="69" name="class" id="11"> class 69
