--- a/form practice.html
+++ b/form practice.html
@@ -12,12 +12,13 @@
         <input type="text" placeholder="enter your name">
         <input type="text" placeholder="enter your subject">
         <input type="number" placeholder="enter your age">
-        <input type="number" placeholder="enter your phone number">
+        <input type="number" placeholder="enter your phone no.">
 
         <input type="password" placeholder="password">
         <input type="radio" value="69" name="class" id="11"> class 69
         <input type="radio" value="88" name="class" id="12"> class 88
         <input type="radio" value="99" name="class" id="13"> class 99
+        <input type="radio" value="76" name="class" id="14"> class 76
 
     </form>
 </body>
