--- a/form practice.html
+++ b/form practice.html
@@ -19,6 +19,7 @@
         <input type="radio" value="88" name="class" id="12"> class 88
         <input type="radio" value="99" name="class" id="13"> class 99
         <input type="radio" value="76" name="class" id="14"> class 76
+        <input type="radio" value="78" name="class" id="15"> class 78
 
     </form>
 </body>
