--- a/form practice.html
+++ b/form practice.html
@@ -10,6 +10,7 @@
 <body>
     <form action="action.php">
         <input type="text" placeholder="enter your name">
+        <input type="text" placeholder="enter your class">
         <input type="text" placeholder="enter your subject">
         <input type="number" placeholder="enter your age">
         <input type="number" placeholder="enter your phone no.">
