--- a/form practice.html
+++ b/form practice.html
@@ -21,6 +21,8 @@
         <input type="radio" value="99" name="class" id="13"> class 99
         <input type="radio" value="76" name="class" id="14"> class 76
         <input type="radio" value="78" name="class" id="15"> class 78
+        <input type="radio" value="54" name="class" id="16"> class 54
+
 
     </form>
 </body>
