--- a/MY PORTFOLIO.html
+++ b/MY PORTFOLIO.html
@@ -26,6 +26,7 @@
         </a>
         <p> <i>I AM CYBER SECURITY ENTHUSIAST</i></p>
         <P><i> BUT I AM ALSO INTERESTED IN WEB DESIGNING</i></P>
+        <P><i> And i also have potential for ui/ux design</i></P>
 </div>
 
 </body>
