--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
         <pre>Lorem ipsum dolor sit amet consectetur, adipisicing elit. 
 Magni nobis repellendus blanditiis amet dolorem tenetur, rem ipsum labore dolores suscipit! 
 Cupiditate repudiandae aperiam dignissimos quia molestias, reprehenderit obcaecati? Laudantium, unde.</pre>
-        <section>interest: sports | art | not studying</section>
+        <section>interest: sports | art | not studying | not relating </section>
         <section>priorities: family | religion | me</section>
         <article> story : will tell you some other day</article>
 
