--- a/Hobbies.html
+++ b/Hobbies.html
@@ -16,6 +16,7 @@
         <ul>
             <li>Writing Song Lyrics</li>
             <li>Playing Sports</li>
+            <li>Listening to Music</li>
             <li>Watching movies</li>
             <li>Hanging around with friends
             </li>
