--- a/Hobbies.html
+++ b/Hobbies.html
@@ -27,6 +27,7 @@
             <li>Listening to music</li>
             <li>studying deeply about any topic</li>
             <li>Vibing alone</li>
+            <li> going out with friends</li>
         </ol>
 
         <!-- Add more content as needed -->
