--- a/Hobbies.html
+++ b/Hobbies.html
@@ -28,6 +28,7 @@
             <li>studying deeply about any topic</li>
             <li>Vibing alone</li>
             <li> going out with friends</li>
+            <li>reading novels</li>
         </ol>
 
         <!-- Add more content as needed -->
