--- a/MY PORTFOLIO.html
+++ b/MY PORTFOLIO.html
@@ -11,7 +11,7 @@
 
 <div>
 
-    <body style="background-color:lightblue;">
+    <body style="background-color:rgb(173, 230, 177);">
         <img src="ayan.jpeg" alt="My Image" height="280">
         <br>
         <a href="https://www.linkedin.com/in/mdayan-dot/" target="main"> <img src="linkedin.png" alt="LinkedIn"
