--- a/MY PORTFOLIO.html
+++ b/MY PORTFOLIO.html
@@ -27,6 +27,7 @@
         <p> <i>I AM CYBER SECURITY ENTHUSIAST</i></p>
         <P><i> BUT I AM ALSO INTERESTED IN WEB DESIGNING</i></P>
         <P><i> And i also have potential for ui/ux design</i></P>
+        <p><i> I am also good at photography</i></p>
 </div>
 
 
