--- a/form practice.html
+++ b/form practice.html
@@ -22,6 +22,8 @@
         <input type="radio" value="76" name="class" id="14"> class 76
         <input type="radio" value="78" name="class" id="15"> class 78
         <input type="radio" value="54" name="class" id="16"> class 54
+        <input type="radio" value="90" name="class" id="17"> class 90
+
 
 
     </form>
