--- a/form practice.html
+++ b/form practice.html
@@ -23,6 +23,8 @@
         <input type="radio" value="78" name="class" id="15"> class 78
         <input type="radio" value="54" name="class" id="16"> class 54
         <input type="radio" value="90" name="class" id="17"> class 90
+        <input type="radio" value="900" name="class" id="18"> class 900
+
 
 
 
